# docs

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: api.md  architecture.md  contributing.md  deployment.md  development.md  getting-started.md  index.md
docs/architecture/: index.md
docs/backend/: architecture.md  license.md
docs/deployments/docker/: traefik.md
docs/frontend/: architecture.md
docs/images/index/: chithi-dev.avif
docs/transparency/: AI.md
